[package]
name = "api"
version = "0.2.1"
authors = ["hpx <hephex@fucina.io>"]
license = "MIT"
description = "abstraction for HTTP API clients"
homepage = "https://github.com/hephex/api"
repository = "https://github.com/hephex/api"
documentation = "https://docs.rs/api"
keywords = ["api", "http", "client"]
categories = ["web-programming::http-client"]
readme = "README.md"

[features]
default = []
use-hyper = ["hyper"]

[dependencies.hyper]
version = "0.10"
optional = true

[dev-dependencies]
hyper = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
